# cmake-example

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  test.c
